--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -17,10 +17,16 @@ RUN go build -o /docker-gs-ping
 ##
 ## Deploy
 ##
+FROM busybox:1.35.0-uclibc as busybox
+From curlimages/curl as curl
 
 FROM gcr.io/distroless/base-debian10
 
 WORKDIR /
+COPY --from=busybox /bin/sh /bin/sh
+COPY --from=busybox /bin/cat /bin/cat
+
+COPY --from=curl /usr/bin/curl /usr/bin/curl
 
 COPY --from=build /docker-gs-ping /docker-gs-ping
 
